--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="wrapper">
+      <div class="header__logo">
+        <a href="/" class="header__logo-link">
+          <img src="svg/odigo-logo.svg" alt="" class="header__logo-pic">
+        </a>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
