--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <div class="wrapper">
       <div class="header__logo">
         <a href="/" class="header__logo-link">
-          <img src="svg/odigo-logo.svg" alt="" class="header__logo-pic">
+          <img src="svg/odigo-logo.svg" alt="Discover Amazing places in Japan" class="header__logo-pic">
         </a>
       </div>
+      <nav class="header_nav">
+        <ul class="header__list">
+          <li class="header__item"><a href="#!" class="header__link">Articles</a></li>
+          <li class="header__item"><a href="#!" class="header__link">Locations</a></li>
+          <li class="header__item"><a href="#!" class="header__link">Videos</a></li>
+          <li class="header__item"><a href="#!" class="header__link">Sign in</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 </body>
