feat: add first section of main

--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="intro">
+
+    </section>
+  </main>
 </body>
 </html>
