feat: finished section intro

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         <form action="" class="search__form">
           <fieldset class="search-form__wrap">
               <p class="search-form__info">
-                <input type="text" class="dearch-form__field">
-                <input type="text" class="dearch-form__field">
+                <input type="text" name='user' class="search-form__field" 
+                placeholder="What would you like to do?">
+                <input type="text" name='user' class="search-form__field" 
+                placeholder="What would you like to do?">
                 <button type="submit" class="search-form__submit">
                   SEARCH
                 </button>
