--- a/index.html
+++ b/index.html
@@ -57,6 +57,40 @@
         </form>
       </div>
     </section>
+    <section class="benefits">
+      <div class="benefits_wrapper">
+        <h2 class="benefits__title">Benefits of Odigo</h2>
+        <div class="benefits__cards">
+          <div class="benefits__card">
+            <div class="benefits__card-pict">
+              <img src="svg/temple.svg" alt="temple">
+            </div>
+            <h3 class="benefits__card-title">Welcome to Odigo!</h3>
+            <p class="benefits__card-desc">Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over.</p>
+            <a href="" class="benefits__card-more">LEARN MORE</a>
+          </div>
+          <div class="benefits__card">
+            <div class="benefits__card-pict">
+              <img src="svg/face.svg" alt="face">
+            </div>
+            <h3 class="benefits__card-title">Your Personal Japan Guide</h3>
+            <p class="benefits__card-desc">Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over.</p>
+            <a href="" class="benefits__card-more">LEARN MORE</a>
+          </div>
+          <div class="benefits__card">
+            <div class="benefits__card-pict">
+              <img src="svg/house.svg" alt="house">
+            </div>
+            <h3 class="benefits__card-title">Promoting Local Businesses</h3>
+            <p class="benefits__card-desc">Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over.</p>
+            <a href="" class="benefits__card-more">LEARN MORE</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
