feat: finish benefits section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         </div>
       </div>
     </section>
+    <section class="places">
+      <div class="wrapper__full">
+        <h2 class="places__title">Get inspired for your next trip</h2>
+      </div>
+    </section>
   </main>
 </body>
 </html>
