feat: add pictures in section places

--- a/index.html
+++ b/index.html
@@ -92,8 +92,21 @@
       </div>
     </section>
     <section class="places">
-      <div class="wrapper__full">
-        <h2 class="places__title">Get inspired for your next trip</h2>
+      <div class="wrapper_full">
+        <div class="places__caption">
+          <h2 class="places__title section__title">Get inspired for your next trip</h2>
+          <a href="#!"class="places__view__all">VIEW ALL</a>
+        </div>
+        <div class="places__cards">
+          <figure class="places__card places__cards__lg">
+            <img src="img/place1.jpg" alt="place1" class="places__card__pict">
+            <figcaption class="places__card__title">Mount Fuji</figcaption>
+          </figure>
+          <figure class="places__card places__cards__lg">
+            <img src="img/place2.jpg" alt="place2" class="places__card__pict">
+            <figcaption class="places__card__title">Kyoto</figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </main>
