feat: finish four part

--- a/index.html
+++ b/index.html
@@ -99,12 +99,29 @@
         </div>
         <div class="places__cards">
           <figure class="places__card places__cards__lg">
-            <img src="img/place1.jpg" alt="place1" class="places__card__pict">
+            <img src="img/place1.jpg" alt="place1" class="places__card__pict places__card__pict__lg">
             <figcaption class="places__card__title">Mount Fuji</figcaption>
+            <a href="#!" class="places__card__link"></a>
           </figure>
           <figure class="places__card places__cards__lg">
-            <img src="img/place2.jpg" alt="place2" class="places__card__pict">
+            <img src="img/place2.jpg" alt="place2" class="places__card__pict places__card__pict__lg">
             <figcaption class="places__card__title">Kyoto</figcaption>
+            <a href="#!" class="places__card__link"></a>
+          </figure>
+          <figure class="places__card places__cards__sm">
+            <img src="img/place3.jpg" alt="place3" class="places__card__pict places__card__pict__sm">
+            <figcaption class="places__card__title">Tokyo</figcaption>
+            <a href="#!" class="places__card__link"></a>
+          </figure>
+          <figure class="places__card places__cards__sm">
+            <img src="img/place4.jpg" alt="place4" class="places__card__pict places__card__pict__sm">
+            <figcaption class="places__card__title">Niigata</figcaption>
+            <a href="#!" class="places__card__link"></a>
+          </figure>
+          <figure class="places__card places__cards__sm">
+            <img src="img/place5.jpg" alt="place5" class="places__card__pict places__card__pict__sm">
+            <figcaption class="places__card__title">Sapporo</figcaption>
+            <a href="#!" class="places__card__link"></a>
           </figure>
         </div>
       </div>
