--- a/index.html
+++ b/index.html
@@ -126,6 +126,27 @@
         </div>
       </div>
     </section>
+    <div class="tours">
+      <div class="wrapper_full">
+        <div class="tours_tour tour">
+          <div class="tour_pic">
+            <img src="img/tour1.jpg" alt="tour1" class="toue_thumb">
+          </div>
+          <div class="tour_info">
+            <h3 class="tour_title">
+              Prefecture in Focus: Tottori
+            </h3>
+            <p class="tour_desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on
+               this if i had the energy but under the bed, for
+                attack the child, open the door, 
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
 </html>
