--- a/index.html
+++ b/index.html
@@ -143,6 +143,25 @@
                this if i had the energy but under the bed, for
                 attack the child, open the door, 
             </p>
+            <a href="#" class="tour_more">VIEW PREFECTURE</a>
+          </div>
+        </div>
+        <div class="tours_tour tour">
+          <div class="tour_info">
+            <h3 class="tour_title">
+              Featured Neighborhood: Kyoto’s Arashiyama
+            </h3>
+            <p class="tour_desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on
+               this if i had the energy but under the bed, for
+                attack the child, open the door, 
+            </p>
+            <a href="#" class="tour_more">VIEW PREFECTURE</a>
+          </div>
+          <div class="tour_pic">
+            <img src="img/tour2.jpg" alt="tour2" class="toue_thumb">
           </div>
         </div>
       </div>
