feat: add section top places

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                this if i had the energy but under the bed, for
                 attack the child, open the door, 
             </p>
-            <a href="#" class="tour_more">VIEW PREFECTURE</a>
+            <a href="#" class="tour_more">VIEW NEIGHBORHOOD</a>
           </div>
           <div class="tour_pic">
             <img src="img/tour2.jpg" alt="tour2" class="toue_thumb">
@@ -166,6 +166,166 @@
         </div>
       </div>
     </div>
+    <section class="top">
+      <div class="wrapper_full">
+        <h2 class="top_title section__title">
+          Today top places to visit
+        </h2>
+        <div class="top_cards">
+
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/nagoya.jpg" alt="nagoya" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">NAGOYA</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/niigata.jpg" alt="Niigata" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">NIIGATA</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/osaka.jpg" alt="osaka" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">OSAKA</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+          
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/saitama.jpg" alt="saitama" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">SAITAMA</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/ueno.jpg" alt="UENO" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">UENO</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+
+          <div class="top_card">
+            <div class="top_card-pic">
+              <img src="img/shibuya.jpg" alt="shibuya" class="top_card-thumb">
+              <div class="top_card-stats">
+                <h3 class="top_card-title">SHIBUYA</h3>
+                <div class="top_card-likes">
+                  <span class="top_card-likes-value">
+                    221
+                  </span>
+                </div>
+                <div class="top_card-comm">
+                  <span class="top_card-comm-value">
+                    50
+                  </span>
+                </div>
+              </div>
+            </div>
+            <p class="top_card-desc">
+              Jump off balcony, onto stranger's head. 
+              Chase ball of string hide when guests come over. 
+              Being gorgeous with belly side up i could pee on this.
+            </p>
+            <a href="#!" class="top_card_link">SEE MORE</a>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
