feat: add footer

--- a/index.html
+++ b/index.html
@@ -326,8 +326,127 @@
         </div>
       </div>
     </section>
-
+    <div class="videos">
+      <div class="videos_wrap">
+        <div class="video_item">
+          <iframe class="video_elem" src="https://www.youtube.com/embed/f4sLdhS1JAc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </main>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer_item">
+        <div class="footer_logo">
+          <img src="svg/footer-logo.svg" alt="footer-logo">
+        </div>
+        <div class="footer_menu">
+          <nav class="footer_nav">
+
+            <ul class="footer_menu">
+              <li class="footer_menu_item">
+                <h3 class="footer_menu_title">
+                  <a href="#!">
+                    Company
+                  </a>
+                </h3>
+              </li>
+              <li class="footer_menu_item">
+                <a href="#!" class="footer_menu_link">
+                  About
+                </a>
+              </li>
+            </li>
+            <li class="footer_menu_item">
+              <a href="#!" class="footer_menu_link">
+                Team
+              </a>
+            </li>
+          </li>
+          <li class="footer_menu_item">
+            <a href="#!" class="footer_menu_link">
+              Careers
+            </a>
+          </li>
+        </li>
+        <li class="footer_menu_item">
+          <a href="#!" class="footer_menu_link">
+            Privacy Policy
+          </a>
+        </li>
+            </ul>
+
+            <ul class="footer_menu">
+              <li class="footer_menu_item">
+                <h3 class="footer_menu_title">
+                  <a href="#!">
+                    Locations
+                  </a>
+                </h3>
+              </li>
+              <li class="footer_menu_item">
+                <a href="#!" class="footer_menu_link">
+                  Tokyo
+                </a>
+              </li>
+            </li>
+            <li class="footer_menu_item">
+              <a href="#!" class="footer_menu_link">
+                Kyoto
+              </a>
+            </li>
+          </li>
+          <li class="footer_menu_item">
+            <a href="#!" class="footer_menu_link">
+              Osaka
+            </a>
+          </li>
+        </li>
+        <li class="footer_menu_item">
+          <a href="#!" class="footer_menu_link">
+            Hokkaido
+          </a>
+        </li>
+            </ul>
+
+            <ul class="footer_menu">
+              <li class="footer_menu_item">
+                <h3 class="footer_menu_title">
+                  <a href="#!">
+                    Social Media
+                  </a>
+                </h3>
+              </li>
+              <li class="footer_menu_item">
+                <a href="#!" class="footer_menu_link">
+                  Facebook
+                </a>
+              </li>
+            </li>
+            <li class="footer_menu_item">
+              <a href="#!" class="footer_menu_link">
+                Twitter
+              </a>
+            </li>
+          </li>
+          <li class="footer_menu_item">
+            <a href="#!" class="footer_menu_link">
+              Instagram
+            </a>
+          </li>
+        </li>
+        <li class="footer_menu_item">
+          <a href="#!" class="footer_menu_link">
+            Youtube
+          </a>
+        </li>
+            </ul>
+
+          </nav>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="index.js">
   </script>
 </body>
