fix: intend in footer

--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
         <div class="footer_logo">
           <img src="svg/footer-logo.svg" alt="footer-logo">
         </div>
-        <div class="footer_menu">
+        <!-- <div class="footer_menu"> -->
           <nav class="footer_nav">
 
             <ul class="footer_menu">
               <li class="footer_menu_item">
                 <h3 class="footer_menu_title">
-                  <a href="#!">
+                  <a href="#!" class="footer_menu_link footer_menu_link_title">
                     Company
                   </a>
                 </h3>
@@ -379,7 +379,7 @@
             <ul class="footer_menu">
               <li class="footer_menu_item">
                 <h3 class="footer_menu_title">
-                  <a href="#!">
+                  <a href="#!" class="footer_menu_link footer_menu_link_title">
                     Locations
                   </a>
                 </h3>
@@ -412,7 +412,7 @@
             <ul class="footer_menu">
               <li class="footer_menu_item">
                 <h3 class="footer_menu_title">
-                  <a href="#!">
+                  <a href="#!" class="footer_menu_link footer_menu_link_title">
                     Social Media
                   </a>
                 </h3>
@@ -445,7 +445,7 @@
           </nav>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </footer>
   <script src="index.js">
   </script>
