feat: add a burger

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
             <li class="header__item"><a href="#!" class="header__link">Videos</a></li>
             <li class="header__item"><a href="#!" class="header__link">Sign in</a></li>
           </ul>
+          <div class="header_nav_close">
+            <span class="header_nav_close_line"></span>
+            <span class="header_nav_close_line"></span>
+          </div>
         </nav>
+
+        <div class="header_burger burger">
+            <span class="burger_line burger_line_first"></span>
+            <span class="burger_line burger_line_secind"></span>
+            <span class="burger_line burger_line_last"></span>
+        </div>
+
       </div>
     </div>
   </header>
