--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </p>
             <a href="#" class="tour_more">VIEW NEIGHBORHOOD</a>
           </div>
-          <div class="tour_pic">
+          <div class="tour_pic tour_pic_mob_first">
             <img src="img/tour2.jpg" alt="tour2" class="toue_thumb">
           </div>
         </div>
